--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "express": "^4.18.2",
+    "less": "^4.1.3",
     "less-watch-compiler": "^1.16.3",
     "pg": "^8.10.0",
     "react-redux": "^8.0.5",
